--- a/examples/src/main/res/layout/activity_replay_history_layout.xml
+++ b/examples/src/main/res/layout/activity_replay_history_layout.xml
@@ -18,6 +18,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <Button
+        android:id="@+id/selectHistoryButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="Select history"
+        />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/playReplay"
         android:layout_width="0dp"
